# tokenizer-101

./: .gitignore  README.md  pyproject.toml
core/: utils.py
core/tokenizer/: __init__.py  base.py  basic.py  gpt4o.py  regex.py  sentencepiece_gemma.py
data/: math_text.txt  merges.json  merges2.json  sample.txt  vocab.json  vocab2.json
scripts/: compare_tokenizers.py
tests/: encode_decode.py  test_gpt4o_tokenizer.py  train.py
